[package]
name = "librocksdb-sys"
version = "6.2.4"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
keywords = [ "bindings", "ffi", "rocksdb" ]

build = "build.rs"
links = "rocksdb"

[features]
default = [ "static" ]
static = []
snappy = []
lz4 = []
zstd = [ "zstd-sys" ]
zlib = []
bzip2 = []


[dependencies]
libc = "0.2"
zstd-sys = { git = "https://github.com/bkchr/zstd-rs.git", branch = "bkchr-export-include-paths2", optional = true }

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "0.7", features = ["v4"] }

[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
bindgen = "0.49"
glob = "0.3"
